--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -155,15 +155,17 @@ h1, h2, h3, h4, h5,
 }
 
 .container .user-image {
-    padding-right: 10px;padding-left: 60px
+    padding-right: 10px;padding-left: 60px;
 }
 
 .img-user-image {
     width: 50px;height: 50px;border: 1px solid black;
-    margin-bottom: 5px;
 }
 .CustomFont {
     font-family: Azonix;
+}
+.dropdown-menu {
+    padding: 0 !important;
 }
 /******************************************** Media ******************************************************/
 @media screen and (max-width: 990px) {
