--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5,
     color: #000; }
 
 .bg-primary {
-    background: #fc7fb2 !important; }
+    background: #007bff !important; }
 
 .ftco-section {
     padding: 7em 0; }
@@ -61,19 +61,28 @@ h1, h2, h3, h4, h5,
         background: #000 !important;
         position: relative;
         top: 0;
-        padding: 10px 15px; } }
+        padding: 10px 15px;
+        border-radius: 0px;
+    }
+}
 .ftco-navbar-light .navbar-brand {
     color: #000;
     text-transform: uppercase;
-    font-weight: 700; }
+    font-weight: 700;
+}
 .ftco-navbar-light .navbar-brand:hover, .ftco-navbar-light .navbar-brand:focus {
-    color: #000; }
+    color: #000;
+}
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-brand {
-        color: #fff; } }
+        color: #fff;
+    }
+}
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav {
-        padding-bottom: 10px; } }
+        padding-bottom: 10px;
+    }
+}
 .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
     font-size: 14px;
     padding-top: 1.2rem;
@@ -85,16 +94,20 @@ h1, h2, h3, h4, h5,
     position: relative;
     opacity: 1 !important; }
 .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-    color: #fc7fb2; }
+    color: #007bff;
+}
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
         padding-right: 0;
         padding-top: .5rem;
         padding-bottom: .5rem;
-        color: rgba(255, 255, 255, 0.7); }
+        color: rgba(255, 255, 255, 0.7);
+    }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-        color: #fff; } }
+        color: #fff;
+    }
+}
 .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
     border: none;
     background: #fff;
@@ -102,31 +115,41 @@ h1, h2, h3, h4, h5,
     -moz-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
     box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
     border-radius: 4px;
-    padding: 0; }
+    padding: 0;
+}
 .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item {
     font-size: 12px;
-    color: #000; }
+    color: #000;
+}
 .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:hover, .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:focus {
-    background: #fc7fb2;
-    color: #fff; }
+    background: #007bff;
+    color: #fff;
+}
 .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    background: #fc7fb2;
-    border-radius: 0px; }
+    background: #007bff;
+    border-radius: 0px;
+}
 @media (max-width: 767.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         padding-left: 15px;
-        padding-right: 15px; } }
+        padding-right: 15px;
+    }
+}
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         color: #fff;
-        background: #fc7fb2;
-        border-radius: 4px; } }
+        background: #007bff;
+        border-radius: 4px;
+    }
+}
 .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #fc7fb2; }
+    color: #007bff; }
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-        color: #fff; } }
+        color: #fff;
+    }
+}
 .ftco-navbar-light .navbar-toggler {
     font-family: Azonix;
     border: none;
@@ -135,9 +158,11 @@ h1, h2, h3, h4, h5,
     padding-right: 0;
     text-transform: uppercase;
     font-size: 16px;
-    letter-spacing: .1em; }
+    letter-spacing: .1em;
+}
 .ftco-navbar-light .navbar-toggler:focus {
-    outline: none !important; }
+    outline: none !important;
+}
 /******************************************** Login Register Navbar ***************************************/
 .top-navbar {
     font-family: Azonix;
@@ -151,15 +176,18 @@ h1, h2, h3, h4, h5,
     /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
 }
 .top-navbar-links:hover {
-    color: #fc7fb2;
+    color: #007bff;
 }
 
 .container .user-image {
-    padding-right: 10px;padding-left: 60px;
+    padding-right: 10px;
 }
-
+.mainMenuPaddingLeft {
+    padding-left: 80px;
+}
 .img-user-image {
-    width: 50px;height: 50px;border: 1px solid black;
+    width: 50px;height: 50px;
+    border-radius: 50%;
 }
 .CustomFont {
     font-family: Azonix;
@@ -167,9 +195,24 @@ h1, h2, h3, h4, h5,
 .dropdown-menu {
     padding: 0 !important;
 }
+.Azonix-style {
+    font-family: Azonix;
+    font-size: small;
+}
 /******************************************** Media ******************************************************/
 @media screen and (max-width: 990px) {
     .container .user-image {
-        padding-right: 10px;padding-left: 10px
+        padding-right: 10px;
+    }
+    .mainMenuPaddingLeft {
+        padding-left: 0px;
+    }
+    .custom-toggler {
+        text-align: left !important;
+    }
+    .img-user-image {
+        width: 50px;height: 50px;
+        border-radius: 20%;
+        box-shadow: 3px 3px 5px grey;
     }
 }
