--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -50,6 +50,7 @@ h1, h2, h3, h4, h5,
 
 .ftco-navbar-light {
     background: #fff !important;
+    margin-bottom: 20px;
     z-index: 3;
     padding: 10px 10px;
     border-radius: 5px;
@@ -59,6 +60,7 @@ h1, h2, h3, h4, h5,
 @media (max-width: 991.98px) {
     .ftco-navbar-light {
         background: #000 !important;
+        margin-bottom: 0px;
         position: relative;
         top: 0;
         padding: 10px 15px;
