--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -165,7 +165,12 @@ h1, h2, h3, h4, h5,
 .ftco-navbar-light .navbar-toggler:focus {
     outline: none !important;
 }
-/******************************************** Login Register Navbar ***************************************/
+/******************************************** Logo & Login Register Navbar ***************************************/
+.arashLogo {
+    min-height:54px;
+    width: 291px;
+    height: 54px;
+}
 .top-navbar {
     font-family: Azonix;
     height: 32px;
@@ -218,7 +223,7 @@ h1, h2, h3, h4, h5,
         box-shadow: 3px 3px 5px grey;
     }
 }
-/******************************************** Media ******************************************************/
+/******************************************** Footer ******************************************************/
 .footer {
     background: #fff !important;
     color: black;
@@ -227,4 +232,9 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
     -moz-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
     box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
+}
+/******************************************** Footer ******************************************************/
+.carousel-item img.loaded {
+    opacity: 0;
+    transition: opacity 1s;
 }
