--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -223,12 +223,22 @@ h1, h2, h3, h4, h5,
         box-shadow: 3px 3px 5px grey;
     }
 }
+@media screen and (max-width: 770px) {
+    .carouselInner {
+        min-height: 300px;
+    }
+    .carousel-inner {
+        min-height: 300px !important;
+    }
+}
 /******************************************** Footer ******************************************************/
 .footer {
     background: #fff !important;
     color: black;
     height: 83px;
-    margin-top: 100px;
+    margin-top: 10px;
+    text-align: center;
+    padding: 20px;
     -webkit-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
     -moz-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
     box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
@@ -238,3 +248,49 @@ h1, h2, h3, h4, h5,
     opacity: 0;
     transition: opacity 1s;
 }
+.carouselInner {
+    min-height: 400px;
+}
+/****************************************** Small Images **************************************************/
+.ImageNumberOne {
+    width: 30%;margin-left:2%;margin-right: 3.3%;height: auto;float:left;position: relative;margin-bottom: 20px;color: white;
+}
+
+.Images_figCaption {
+    text-align:center;position: absolute;top: 30px;left: 20px;padding-top:1%;padding-bottom:1%;background: rgba(0, 0, 0, 0.6);font-size: 1.65vw
+}
+
+.ImageNumberTwo {
+    width: 30%;margin-left:2%;height: auto;float: left;position: relative;margin-bottom: 20px;color: white;
+}
+
+.ImageNumberThree {
+    width: 30%;height: auto;float:left;position: relative;margin-bottom: 20px;color:white;
+}
+/****************************************** Arash Talent Images Static Ones **********************************/
+.image-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 75%; /* 4:3 aspect ratio */
+}
+
+.image-container img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5); /* Black background with 50% opacity */
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+
