--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'Azonix';
-    src: url("../fonts/Azonix.otf");
+    src: url("../fonts/Azonix.otf") format('opentype');
+    font-display: block;
 }
 body {
     font-size: 16px;
@@ -47,7 +48,7 @@ h1, h2, h3, h4, h5,
 }
 
 .heading-section {
-    font-family: Azonix;
+    font-family: 'Azonix', Arial, Helvetica, sans-serif;
     font-size: 28px;
     color: #000;
 }
@@ -166,7 +167,7 @@ h1, h2, h3, h4, h5,
     }
 }
 .ftco-navbar-light .navbar-toggler {
-    font-family: Azonix;
+    font-family: 'Azonix', Arial, Helvetica, sans-serif;
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
     cursor: pointer;
@@ -185,7 +186,7 @@ h1, h2, h3, h4, h5,
     height: 54px;
 }
 .top-navbar {
-    font-family: Azonix;
+    font-family: 'Azonix', Arial, Helvetica, sans-serif;
     height: 32px;
     background-color: black;
     padding-right: 20px;
@@ -210,7 +211,7 @@ h1, h2, h3, h4, h5,
     border-radius: 50%;
 }
 .CustomFont {
-    font-family: Azonix;
+    font-family: 'Azonix', Arial, Helvetica, sans-serif;
 }
 .dropdown-menu {
     padding: 0 !important;
