--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -258,7 +258,7 @@ h1, h2, h3, h4, h5,
 }
 /******************************************** Footer ******************************************************/
 .footer {
-    background: #fff !important;
+    background: #fff;
     color: black;
     height: 83px;
     margin-top: 10px;
