--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -1,3 +1,8 @@
+.modal-body-visible {
+    visibility: visible; /* Make the content visible */
+    position: static; /* Put it back in the document flow */
+    top: auto; /* Reset the position */
+}
 @font-face {
     font-family: 'Azonix';
     src: url("../fonts/Azonix.otf") format('opentype');
