--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -268,12 +268,15 @@ h1, h2, h3, h4, h5,
 }
 /******************************************** Footer ******************************************************/
 .footer {
+    font-family: 'Azonix', Arial, Helvetica, sans-serif;
+    font-size: 1em;
     background: #fff;
     color: black;
     height: 83px;
     margin-top: 10px;
     text-align: center;
     padding: 20px;
+    padding-top: 2em;
     -webkit-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
     -moz-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
     box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
