--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -29,6 +29,11 @@ a:hover, a:focus {
     box-shadow: none;
 }
 
+.imghover:hover {
+    filter: grayscale(100%);
+}
+
+
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
     line-height: 1.5;
