footer fixed in low sizes

--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -276,9 +276,12 @@ h1, h2, h3, h4, h5,
     .carousel-inner {
         min-height: 230px !important;
     }
-    /*.footerText {*/
-    /*    display: none;*/
-    /*}*/
+    .footerText {
+        position: relative;
+        float: right;
+        font-size: 0.7em;
+        margin-left: 17%;
+    }
 }
 /******************************************** Footer ******************************************************/
 .footerText {
