instagram logo hide on low size

--- a/public/css/englishStyle.css
+++ b/public/css/englishStyle.css
@@ -284,11 +284,8 @@ h1, h2, h3, h4, h5,
     }
 }
 @media screen and (max-width: 400px){
-    .footerText {
-        position: relative;
-        float: right;
-        font-size: 0.5em;
-        margin-left: 17%;
+    .hideAtLowSize {
+        display: none;
     }
 }
 /******************************************** Footer ******************************************************/
